--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
